使用 znufethesis class

--- a/report/07-conclusion.Rmd
+++ b/report/07-conclusion.Rmd
@@ -33,9 +33,18 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 
 
-# 模型设定
+# 结论
 
 
 
-# 参考文献 {-}
+\cleardoublepage
+
+\pagestyle{emptypage}
+
+\renewcommand{\chapterlabel}{\bibname}    % 设置页眉
+
+<!-- # 参考文献 {-} -->
 [//]: # (\bibliography{Bibfile})
+
+
+
