--- a/report/index.Rmd
+++ b/report/index.Rmd
@@ -1,13 +1,15 @@
 --- 
-title: "A Minimal Book Example"
-author: "Yihui Xie"
+title: "广义可加混合模型及其应用"
+author: "金林"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-bibliography: [Bibfile.bib, thesis.bib]
 css: ./style/markdown.css
 autoEqnLabels: true
 eqnPrefixTemplate: ($$i$$)
 linkReferences: true
 csl: ./style/chinese-gb7714-2005-numeric.csl
 link-citations: true
+lot: yes
+lof: yes
+listings: yes
 ---
