整理引用和参考文献

--- a/report/Bibfile.bib
+++ b/report/Bibfile.bib
@@ -23,8 +23,8 @@
   url       = {http://www.jstor.org/stable/3448413},
 }
 
-@Article{10.1093/biomet/82.1.81,
-  author   = {BRESLOW, NORMAN E. and LIN, XIHONG},
+@Article{Breslow1995,
+  author   = {Breslow, NORMAN E. and LIN, XIHONG},
   title    = {{Bias correction in generalised linear mixed models with a single component of dispersion}},
   journal  = {Biometrika},
   year     = {1995},
