--- a/bayes-GAMM.RMD
+++ b/bayes-GAMM.RMD
@@ -124,11 +124,11 @@ $\boldsymbol X$ 和未知参数向量 $\boldsymbol \beta$ 的乘积，即
 $f =\boldsymbol X \boldsymbol \beta$ 。系数向量 $\boldsymbol \beta$ 的所有先
 验都具有相同的一般高斯形式
 
-$$\beta | \tau^{2} \propto \exp \left(-\frac{1}{2 \tau^{2}} \beta^{\prime} K \beta\right)$$ #[eq:m1]
+$$\beta | \tau^{2} \propto \exp \left(-\frac{1}{2 \tau^{2}} \beta^{\prime} K \beta\right)$$ {#eq:m1}
 
 这意味着尽管T2遵循部分不正确的高斯先验
 
-$$\beta | \tau^{2} \sim N\left(0, \tau^{2} K^{-}\right)$$ #[eq:m2]
+$$\beta | \tau^{2} \sim N\left(0, \tau^{2} K^{-}\right)$$ {#eq:m2}
 
 其中 $K^{-}$ 是惩罚矩阵 $K$ 的广义逆。函数 $f$ 的平滑量由方差参数 $\tau^{2}$ 控制。 
 对于一个完全贝叶斯的分析中，在层次结构的另一个阶段引入 $\tau^{2}$ 的超先验。
@@ -139,13 +139,13 @@ $\tau^{2}\sim IG（a，b）$ 。（在高斯加法混合模型 $y=\eta+\epsilon$
 空间协变量的光滑函数 $f(x)$ 中，$x_{i}$ 表示在一个空间域内观测对象 $i$ 的位置，该光滑
 函数也可以表示 $f=X \beta$ 。最简单的情况中， $\beta$ 的一个 具体值 $\beta_{s}$ 与 $f(s)$
 是相等的，即在 $f(\cdot)$ 在 $s$ 点的值。并且在 Besag et al. (1991) 中，$\boldsymbol \beta$
-的先验被假设是马尔科夫随机先验，这同样可以用在 @eq:{m1} 的一般形式中。
+的先验被假设是马尔科夫随机先验，这同样可以用在 [@eq:m1] 的一般形式中。
 
 对于非结构化的随机效应，一个常用的先验假设是 $b_{g}$ 符合独立同分布，并服从高斯形式，其
 中需要有关于 $v^2$ 的高度离散的超先验。
 
 显然，可加性平滑影响函数$f_{1}, \ldots, f_{p}$间的差别是微小。事实上，不是为函数 $f$ 
-的随机游走指定例如一阶或二阶的先验，随机效应 @eq:{m2} 的先验也可以指定。二者之间的
+的随机游走指定例如一阶或二阶的先验，随机效应 [@eq:m2] 的先验也可以指定。二者之间的
 区别在于函数 $f$ 所允许的平滑量。对于随机效应先验的指定，允许连续参数或多或少地不受
 限制地变化，而随机游走先验需保证连续参数在x的范围内平滑地变化。正如在某些情况下已经
 提到的那样。甚至可能需要将结构化和非结构化影响都包括在预测器中。
