--- a/bayes-GAMM.RMD
+++ b/bayes-GAMM.RMD
@@ -47,7 +47,9 @@ graphics.off()
 Sys.setlocale("LC_ALL", "Chinese")
 ```
 
-#引言
+
+# 引言
+
 
 广义加性混合模型（GAMM）为涉及横截面，纵向和空间数据时的现实复杂情况下的
 回归分析提供了广泛而灵活的框架。它们扩展了广义线性模型的类，通过将未知的
@@ -88,8 +90,8 @@ nardinelli，Clayton和Montomoli（1995）。
 包括文章开头以加成形式描述的所有不同类型的影响。本文结果有利于对这些模型的后
 验推断特性有更为深入的了解，并为实际应用中的工具使用和遇到的限制提供了指导。
 
-#Bayes 广义可加混合模型
 
+# Bayes 广义可加混合模型
 
 广义线性模型假设，给定协变量 $w$ ，响应变量 $y$ 的分布属于指数族，并且
 $\mu = E（y | w）$ ，线性预测器为 $\eta =\gamma ^ {\prime} w$，连接函数
@@ -102,7 +104,7 @@ $$\eta=f_{1}\left(x_{1}\right)+\cdots+f_{p}\left(x_{p}\right)+
 \gamma^{\prime} w+b_{g}$$
 
 其中未知函数 $f_{1}, \ldots, f_{p}$ 是可度量协变量、时间尺度和空间数据
-的光滑函数。参数 $b_{g}, g\in\{1,\ldotsG\},$代表互不相关的随机效应，主要用来
+的光滑函数。参数 $b_{g}, g\in\{1,\ldots ，G\},$代表互不相关的随机效应，主要用来
 捕捉未观测到的异质性。在大多数情况下，分组变量是标识不同单元或集群的索引。它
 也可以是表示不同空间位点的指标，最后形成空间异质性。一种常见的方法是将空间效
 应 $f_{spat}（s）$ ( $s \in\{1, \ldots, S\}$表示一个空间内的不同位置)分解成平
@@ -158,3 +160,240 @@ $\tau^{2}\sim IG（a，b）$ 。（在高斯加法混合模型 $y=\eta+\epsilon$
 BayesX进行的，这是一个用MCMC技术进行贝叶斯推理的软件包。该程序和用户手册可通过互联网获
 取，网址为：http：// www .stat .uni-muenchen.de /~lang/。BayesX的用户手册还包含对本文中使用的MCMC技术的简短调查。
 
+# 2001_Fahrmeir_et_al引言
+
+以上的案例表明了一个共同特征，即都出现了可度量的协变量、或具有空间相关性的协变量
+ $x_{1}, \ldots, x_{p}$ （未知的、可能对响应变量有非线性影响）以及设计矩阵 $w$ ,
+它对响应变量有线性影响。另外，再加入可表示非结构化的随机效应 $b$ 来计量未观
+测到的异质性或相关性。因此，可得到如下的可加形式的模型：
+
+$$\eta=f_{1}\left(x_{1}\right)+\ldots+f_{p}\left(x_{p}\right)+w^{\prime} \beta+b
+$$ {#eq:m3}
+
+
+若观测对象符合指数族分布的要求，并设置合理的连接函数，则 [@eq:m3] 可定义一个
+广义可加混合模型或是半参数混合模型。
+
+在失业时间的分析中，我们利用特定地区的空间相关随机效应来解释不能被其他协变量解释的空间
+异质性。从经典方法来看，空间效应一般被认为是一个具有能够反映邻域关系的合理先验的相关随
+机效应。在贝叶斯方法中，把空间效应视为空间协变量$x_j$ 的空间相关效应$f_j(x_j)$,并且
+将其视为式 [@eq:m3] 的非参数可加混合形式的一部分将更加有用。这样可以对可度量协变量和空
+间相关随机效应（即空间协变量）进行统一处理。这种模型我们称之为GAMM模型。对于这类模型的
+统计推断，现存的方法有一些缺陷和限制，尤其是响应变量不服从高斯分布时。关于GAMM模型，Lin
+和Zhang(1999)在扩展Breslow和Clayton(1993)以及Breslow和Lin（1995）广义线性混合模型成果的
+基础上，使用用平滑样条和双重惩罚拟似然（DPQL）法提出了合理的推断。但他们同时也指出，与
+GLMM模型相似，模型推断同样存在偏差问题，尤其是对于二分类响应变量和存在随机效应的模型，因
+此MCMC方法成为另外一种具有吸引力的选择。S-PLUS能够处理GAMM模型（含有样条或LOESS函数）的
+指数族数据分析，但是它无法同时估计平滑参数和方差成分。
+
+本文提出一种基于MCMC抽样的广义贝叶斯方法，它可以对广义可加模型以及包括结构化和非结构化
+随机效应的混合模型进行统计推断。通过设置具有相同结构但不同平滑程度的马尔科夫随机场平滑
+先验，不同类型的协变量，即常见的具有固定效应的可度量协变量（如具有非参数趋势特征和季节
+效应的时间尺度），非结构化随机效应和空间协变量在相同的广义框架下被同等处理。同时包括平
+滑参数的数据驱动选择。尽管响应变量服从高斯分布的模型也被包括在此分析框架中，但本文的主
+要关注点是响应变量不服从高斯分布的模型，例如二分类响应变量和离散响应变量。前面提到的应
+用部分的数据示例和其他应用的经验表明，在许多协变量和大数据集的情况下，该方法是切实可行
+的。MCMC程序提供所有感兴趣的后验样本，并允许估计后验均值、中值、分位数置信区间和预测分
+布。不需要基于渐近正态分布的假设进行近似，也不需要“插入”过程。
+
+对于高斯响应，Gibbs采样可用于基于平滑先验的完全贝叶斯分析;参见Wong和Kohn(1996)，他们在不
+包含任何非结构化或空间随机效应的加性模型中使用状态空间或样条的动态模型，或者是Hastie和
+Tibshirani(2000)，他们将Gibbs采样器推导作为贝叶斯的逆拟合过程。Smith and Kohn(1996)和
+Denison等人(1998)提出了使用回归样条或更一般的分段多项式的贝叶斯基函数方法，同样没有随机
+效应。我们在实现中使用的更直接的方法，利用具有置信区间的后验精度矩阵;参见Rue(2000)或
+Lang and Brezger(2000)。
+
+对于基本的非高斯模型，需要比Gibbs采样更通用的MCMC技术。而现有的建议方法和实践经验还存在
+不足。Hastie和Tibshirani(2000)为广义可加模型扩展了MH类算法，但没有给出任何关于性能的例子
+或陈述。Mallick等人(2000)提出了一种广义线性模型的贝叶斯多元自适应回归样条方法，作为
+Denison等人(1998)贝叶斯曲线拟合方法的扩展，但正如他们所说，采样器收敛速度较慢。由
+Biller(2000)开发的，用于半参数广义线性模型的自适应回归样条函数的可逆MCMC算法似乎有更好的
+收敛特性,并可能扩展用于GAMM类模型。
+
+我们的方法是基于产生自状态空间和马尔科夫随机场模型的高斯平滑先验。在本文考虑非高斯观测模
+型的情况下，Gibbs采样不适用于高维后验的采样。因此。我们将条件先验与MH算法结合起来，该方
+法由Knorr-Held(1999)在动态广义线性模型的背景下开发，为了从可度量协变量$x_j$的非线性影响
+$f_j(x_j)$ 后验中提取移动样本。对于具有马尔可夫随机场先验的空间协变量，该块移动采样器以
+高计算效率的方式扩展，用于从空间效应的后验中提取块移动样本。
+
+本文剩余部分的结构安排如下：第二章描述贝叶斯半参数混合模型，第三章详细介绍MCMC算法的选
+择。第四章将通过文章开头的数据例证本文所选方法的实际可行性。所有计算都使用BayesX进行。
+
+# Bayes半参数混合模型
+
+## 观测模型
+
+当前的回归中，有观测值$\left(y_{i}, x_{n},\ldots, x_{i p},w_{i}\right),i=1,\ldots,n$,
+ $y$ 是响应变量，$x=\left(x_{1}, \ldots, x_{p}\right)$ 是表示可度量协变量或空间
+协变量的一个向量，$w$ 也表示协变量。
+
+在纵向数据的研究中，正如本文第四章的火灾破坏案例和失业时间案例，协变量向量将包含至少一
+个表示时间尺度的变量，如时间长度和时刻。在一些诸如失业案例的研究中，空间协变量，如失业
+者的生活居住地，或许也被考虑并被带入模型中。
+
+广义可加模型和半参数模型(Hastie and Tibshirani, 1990 )假定，给定
+ $x_{i}=\left(x_{11}, \ldots, x_{i p}\right)$ 和 $w_{i}$ 以及属于指数族的 $y_{i}$ ，
+并且 $y_{i}$ 具有均值 $\mu_{i}=E\left(y_{i} | x_{i}, w_{i}\right)$ ，通过如下公式
+ 
+$$\begin{array}{c}{\mu_{i}=h\left(\eta_{i}\right)} \\ {\eta_{i}=f_{1}\left(x_{i 
+1}\right)+\ldots+f_{p}\left(x_{i p}\right)+w_{i}^{\prime} \beta}\end{array}
+$$ {#eq:m4}
+
+可将均值 $\mu_{i}$ 与半参数预测子 $\eta_{l}$ 相连接。
+
+ $h$ 是一个已知连接或已经的响应函数, $f_{1}, \ldots, f_{p}$ 是协变量的未知平滑函数。
+并且空间协变量 $x_{j}$ 的空间相关效应（随机效应）以$f_{j}\left(x_{i}\right)$ 的形式
+被包含在模型中。如果协变量不足以解释研究单位间的异质性或者研究对象是纵向研究中具有相
+关性的数据，则构建具有形式 [@eq:m4] 的模型或许是不合适的。一种常见的处理这个问题的方法
+是在预测子中加入随机效应。即产生具有如下形式预测子的GAMM模型
+
+$$\eta_{i}=f_{1}\left(x_{i 1}\right) z_{i 1}+\ldots+f_{p}\left(x_{i p}\right) z_{i 
+p}+w_{i}^{\prime} \beta+b_{g_{i}}$$ {#eq:m5}
+
+其中 $b_{g_{i}}$ 表示特定个体或特定组的随机效应，如果在第 $g$ （$g=1,\ldots, G$）
+组中存在第 $i$ 个观测个体，则 $b_{g_{i}}=b_{g}$ 。在森林损害数据的分析中，添加了特定
+树的效应，以解释相关性和未观测到的异质性。由于树的数目太多，常用的固定效应的方法不再
+适用，因此选择具有随机效应的模型。
+
+## 先验分布
+
+在Bayes半参数推断中，未知函数 $f_{1}, \ldots, f_{p}$ ，更准确的说是相应的函数估计
+向量，以及参数 $\beta=\left(\beta_{1}, \ldots, \beta_{r}\right)$ 和随机
+效应 $b=(b(1), \ldots, b(G))$ 都被认为是随机变量。观测模型被视为以这些随机变量为条件，
+并且必须提前为模型设定合适的先验分布。
+
+未知函数 $f_{1}, \ldots, f_{p}$ 的先验设置取决于协变量的类型和对 $f_j$ 平滑度的经验
+判断.时标和可度量协变量的先验分布是广义线性模型中常见的高斯分布。参见Fahrmeir和
+Tutz（1997）的第8章。空间协变量的先验基于马尔科夫随机场，参见Besag(1974)和Besag
+等（1991）或者Besag和Kooperberg(1995)中的相关说明。
+
+### 可度量协变量和时标
+
+首先考虑具有相同空间观测数目 $x_{i}, i=1, \ldots, m, m \leqslant n$ 的可度量协变量
+$x$ ,按顺序排列 $x_{(1)}<\ldots<x_{(t)}<\ldots<x_{(m)}$ 可定义 $x$ 轴上的等距网格。
+这种方法常用于以下情况，即每个时刻 $t$ 都对应协变量 $x$ ,并且网格点对应时间单位，如
+周、月或是年，但通常 $x$ 可以是任意有序维数。定义 $f(t) :=f\left(x_{(t)}\right)$ ，
+
+$$f=(f(1), \ldots, f(t), \ldots, f(m))^{\prime}$$
+
+表示函数估计向量，则在时间趋势的分析案例中，常见的平滑函数的先验是一阶或二阶随机游走，
+即
+
+$${f(t)=f(t-1)+u(t)}$$ {#eq:m6a}
+
+或者
+
+$${f(t)=2 f(t-1)-f(t-2)+u(t)}$$ {#eq:m6b}
+
+其中， $u(t) \sim N\left(0 ; \tau^{2}\right)$ ，并且扩散先验 $f(1)\propto$ 常数，f(1)
+和f(2) 也均正比于常数。式 [@eq:m6a] 和[@eq:m6b]都可作为平滑先验，惩罚过于粗糙的函数f。
+一阶随机游走惩罚连续状态之间的 $f(t)-f(t-1)$突变，二阶随机游走惩罚偏离线性趋
+势$2f(t-1)-f(t-2)$的偏差。注意，二阶随机游走是通过计算二阶差分得到的，即相邻一阶差分的
+差分。在实践中，这两种先验的不同之处在于，二阶随机游走先验的估计函数往往更平滑一些。当
+然，更高阶差分先验也是可能的。例如，如果协变量x是时间t(以月为单位)，那么季节性成分 $f(t)$ 
+的一个常见先验平滑为：
+
+$$f(t)+f(t-1)+\ldots+f(t-11)=u(t) \sim N\left(0,\left.\tau\right|^{2}\right)$$ {#eq:m7}
+
+接下来考虑更为一般的空间观测数不相等的情况。令
+
+$$x_{(1)}<\ldots<x_{(t)}<\ldots<x_{(m)}$$
+其中，$m \leqslant n$ ，表示协变量 $x$ 的不同观测数目。对于 $f(t) :=f\left(x_{(t)}\right)$，
+有函数估计向量：
+
+$$f=(f(1), \ldots, f(t), \ldots, f(m))^{\prime}$$
+
+随机游走或自回归先验也需做出调整来解释观测的不等间距 $\delta_{t}=x_{(t)}-x_{(t-1)}$。
+一阶随机游走被定义为
+
+$$\begin{array}{l}{f(t)=f(t-1)+u(t)} 
+\\ {u(t)}{\sim N\left(0;\delta_{t}\tau^{2}\right)}\end{array}$$ {#eq:m8}
+
+误差项的方差由 $\tau^{2}$ 变为 $\delta_{t}\tau^{2}$ 。二阶随机游走是
+
+$$f(t)=\left(1+\frac{\delta_{t}}{\delta_{t-1}}\right) f(t-1)-\frac{\delta_{t}}
+{\delta_{t-1}} f(t-2)+u(t)$$ {#eq:m9}
+
+其中 $u(t)\sim N\left(0;w_{t}\tau^{2}\right)$ , $w_t$ 表示一个合理的权重。权重有以下
+几种形式。对于一阶随机游走，权重形式最简单，即 $w_{t}=\delta_{t}$ 。权重还可以是
+
+$$w_{t}=\delta_{t}\left(1+\frac{\delta_{t}}{\delta_{t-1}}\right)$$
+
+这种形式考虑同时考虑了差距 $\delta_t$ 和 $\delta_{t-1}$ 。$\delta_{t-1}$ 由一阶差分
+
+$$\frac{f(t)-f(t-1)}{\delta_{t}}-\frac{f(t-1)-f(t-2)}{\delta_{t}-1}$$
+
+的差分产生，并假设彼此间独立。Berzuini和Larizza对二阶自回归先验给出了一个相关但不同的
+建议(1996)。另一种可能性是基于Kohn和Ansley(1987)的工作，使用随机微分方程先验的状态空间表示。
+Biller和Fahrmeir(1997)遵循了这一观点，但与本文选择的先验相比，后验样本的收敛和综合表现
+存在显著问题。
+
+由于随机游动或其他自回归模型的马尔可夫设定，函数估计向量 $f$ 的先验似乎是以一种非对称的定
+向方式定义的。然而，这些先验总是可以以非定向对称的形式重写。这是因为任何离散的马尔可夫过
+程都可以用马尔可夫随机场的不受约束的形式来表示，即不仅包括以前的变量$f(t-1)、f(t-2)$，还
+包括将来的变量 $f(t + 1)、f(t +2)$ 等。这说明对于整个向量 $f$ 以及先验 [@eq:m8] 
+ [@eq:m9] 或者 [@eq:m7] 的设定，均以高斯先验为前提是不正确的，
+$f\sim N\left(0;\tau^{2} K^{-}\right)$ 中的 $K^{-}$ 表示含有置信区间的诊断精度或
+者是惩罚矩阵 $K$ 的广义逆矩阵。如式 [@eq:m8] 中一阶随机游走的惩罚矩阵是
+
+$$K=\left(\begin{array}{l} \delta_2^{-1}&-\delta_2^{-1}
+\\-\delta_2^{-1}&\delta_2^{-1}+\delta_3^{-1}&-\delta_3^{-1}
+\\ \ & -\delta_3^{-1}&\delta_3^{-1}+\delta_4^{-1}& \ &-\delta_4^{-1}
+\\ \ & \ & \ & \ddots & \ & \ddots & \ 
+\\ \ & \ & -\delta_{m-2}^{-1}& \ & \delta_{m-2}^{-1}+\delta_{m-1}^{-1}&-\delta_{m-1}^{-1}
+\\  \ & \ & \ & \ & -\delta_{m-1}^{-1}& \delta_{m-1}^{-1}+\delta_{m}^{-1}&-\delta_{m}^{-1}
+\\   \ & \ & \ & \ &  \ &-\delta_{m}^{-1}&\delta_{m}^{-1}\end{array} \right)$$
+
+若 $x$ 值是等间距的，则有
+
+$$
+K=\left(\begin{array}{cccccc}{1} & {-1} & \ & \ & \ & \ 
+\\ {-1} & {2} & \ & {-1} & \ & \ & \ 
+\\ \ & \ & {\ddots} & \ & {\ddots} & \ & {\ddots} & \ 
+\\ \ & \ & \ & {-1} & \ & {2} & \ & {-1} 
+\\ \ & \ & \ & \ &  \ &{-1} & \ & {1}\end{array}\right)
+$$
+
+### 空间协变量
+
+现在考虑空间协变量 $x$ ，其中 $x$ 的值表示连接的地理区域中的位置或位置。例如，在失
+业研究中，$x$ 代表了失业人口居住的地区。处理空间协变量的一种常见方法是假设相邻地点比两
+个任意地点更相似。因此，对于有效的先验定义，必须为每个地点 $x_t$ 定义一组相邻点。
+对于本文所考虑的地理数据，我们通常假设两个地点 $x_t$ 和 $x_j$ ;如果他们有共同的边界，他们就
+是相邻点。但对相邻更复杂的定义也是可能的;参见Besag等人(1991)。我们为函数估计
+$f(t),t=1,\cdot,m$，$m$个不同地点$x_j$ ,设定如下的空间平滑先验:
+
+$$\begin{array}{l}{\qquad f(t) \,|\, f(j) \,\, j \neq t, \tau^{2} \sim N\left\{\sum_{j\in \partial_{j}} f(j) / N_{t}, \tau^{2} / N_{t}\right\}}  \end{array}$$ {#eq:m10}
+
+其中 $N_{t}$ 表示邻近地点的数目，$j \in \partial_{t}$ 表示地点 $x_{j}$ 与地点 $x_{k}$
+相邻。因此$f(t)$ 的条件均值是相邻地点函数估计的未加权平均。对于空间数据，由于$x_t$之间没
+有固定的顺序，所以同时间或可度量协变量一样，其设定是无定向的。
+
+一个更一般的先验可由式 [@eq:m11] 给出，式 [@eq:m10] 是式 [@eq:m11] 的特例。
+
+$$f(t) | f(j) \,\,j \neq t\,, \tau^{2} \sim N\left\{\sum_{j \in \partial_{t}} w_{t j} / w
+_{t+} f(j), 1 / w_{t+} \tau^{2}\right\}$$ {#eq:m11}
+
+其中 $w_tj$ 是已知的相等权重，加号表示其它下标的总和。
+
+这种先验称为高斯固有自回归;参见Besag et al.(1991)和Besag and Kooperberg(1995)。当指定
+$w_tj=1$ ，得到特例式 [@eq:m10] ，使得 $x_t$点的每个相邻点有相等的权重。不相等
+的权重可以基于相邻地点的共同边界长度或两个地点的中心点距离进行设置:详情见Besag等人(1991)。
+然而，本文的应用仅限于式 [@eq:m10] 所示的邻近权重先验。
+
+在自回归先验[@eq:m8] ，[@eq:m9] 或者 [@eq:m7]的情况中，[@eq:m11]
+可以写为关于惩罚矩阵的形式，即
+
+$f | \tau^{2} \propto \exp \left(-\frac{1}{2 \tau^{2}} f^{\prime} K f\right)$
+
+其中元素$K$ 通过以下方式给出
+
+$$k_{t t}=w_{t+}$$
+
+并且
+
+$$k_{t j}=\left\{\begin{array}{ll}{-w_{t j}} & {j \in \partial_{t}} \\ {0} & {\text { 
+otherwise }}\end{array}\right.$$
+
+通常这个先验是不恰当的，因为K非满秩，因此不可逆。
+对于可度量协变量或空间协变量的函数$f$，其先验的密切形式相似性允许有一个统一的MCMC算法，该算法本质上依赖于惩罚矩阵$K$，并且实际上独立于协变量的类型和平滑的定义。详细描述将在下一章节进行。
