--- a/report/04-simulation.Rmd
+++ b/report/04-simulation.Rmd
@@ -35,7 +35,47 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 # 蒙特卡洛模拟 
 
+## 正态可加混合模型模拟分析
 
+### 不带有非参数回归项的混合模型
+
+### 不带有随机效应的可加模型
+
+### 同时带有非参数回归项和随机效应的半参数模型
+
+一个线性自变量，一个分类自变量，一个非参数自变量，一个随机效应
+
+非线性函数的设定
+
+
+$$
+\addtolength{\jot}{1em}
+\begin{aligned}
+f_{1}\left(x_{1}\right)&=\frac{1}{3}\left\{2
+F_{8,8}\left(x_{1}\right)+F_{5,5}\left(x_{1}\right)\right\}-1 \\ 
+f_{2}\left(x_{2}\right)&=\frac{1}{10}\left\{6 F_{30,17}\left(x_{2}\right)+4
+F_{3,11}\left(x_{2}\right)\right\}-1 \\ 
+F_{p, q}(x)&=\frac{\Gamma(p+q)}{\Gamma(p) \Gamma(q)} x^{p-1}(1-x)^{q-1}
+\end{aligned}
+$$
+
+其中 $\Gamma (\cdot)$ 为伽玛函数。
+
+## Logit可加混合模型模拟分析
+
+### 不带有非参数回归项的混合模型
+
+### 不带有随机效应的可加模型
+
+### 同时带有非参数回归项和随机效应的模型
+
+## 泊松可加混合模型模拟分析
+
+### 不带有非参数回归项的混合模型
+
+### 不带有随机效应的可加模型
+
+### 同时带有非参数回归项和随机效应的模型
 
 <!--# 参考文献 {-}-->
 [//]: # (\bibliography{Bibfile})
