--- a/report/05-aqi-des.Rmd
+++ b/report/05-aqi-des.Rmd
@@ -33,7 +33,33 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 
 
-# 描述分析 
+# 城市空气质量状况描述及时空分布特征
+
+## 空气质量相关理论
+
+### 空气质量指数简介
+
+### 空气质量影响因素概述
+
+## 变量选择及数据预处理
+
+### 变量选择
+
+### 数据来源及预处理
+
+## 城市空气质量状况描述
+
+### 城市空气污染状况描述
+
+### 城市空气质量影响因素描述
+
+## 空气质量指数时空分布特征
+
+### 空气质量指数时间分布特征
+
+### 空气质量指数空间分布特征
+
+### 空气质量指数时空格局演变
 
 
 
