--- a/report/06-aqi-gamm.Rmd
+++ b/report/06-aqi-gamm.Rmd
@@ -33,7 +33,29 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 
 
-# 模型建立
+# 基于广义可加混合模型的城市空气质量影响因素实证分析
+
+## 因变量定义及自变量筛选
+
+### 因变量定义
+
+### 基于Lasso的自变量筛选
+
+## 空气严重污染的影响因素分析
+
+### 泊松可加混合模型的建立
+
+### 二项可加混合模型最优模型选择
+
+### 是否出现严重污染的影响因素分析
+
+## 空气质量为优的影响因素分析
+
+### 泊松可加混合模型的建立
+
+### 泊松可加混合模型最优模型选择
+
+### 空气质量为优的天数的影响因素分析
 
 
 
